--- a/paciente2 citasP.html
+++ b/paciente2 citasP.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <h3><b>CLINICA VIVE MEJOR</b></h3>
+                <img src="assets/img/logocli.png">
                 <h3><b>SUGERENCIAS</b></h3>
             </div>
         </nav>
