--- a/paciente1.html
+++ b/paciente1.html
@@ -25,39 +25,57 @@
         </nav>
         <section class="features-icons bg-light text-center">
             <div class="container">
-                <div class="row">
-                   <div class="col-sm-6">
-                        <div class="row">
-                            <p class="lead mb-0"> <b>Especialista que lo atendió</b></p>
-                            <input class="form-control form-control-lg" id="nombre_especialista" type="email" placeholder="" data-sb-validations="required,email" />
-                            <br>
-                            <br>
-                            <br>
-                            <p class="lead mb-0"> <b>Número de documento</b></p>
-                            <input class="form-control form-control-lg" id="documento" type="email" placeholder="" data-sb-validations="required,email" />
+                <form action = "#">
+
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <label for="form-label" class="form-label">Especialidad</label> <br>
+                            <input type="text"  class="form-control" required placeholder="Area donde fue atendido">    
                         </div>
+                        <div class="col-lg-6">
+                                    <label for="form-label" class="form-label">Número de Documento</label> <br>
+                                    <input type="number"  class="form-control" required placeholder="Número de cedula">    
+                        </div>       
                     </div>
-                    <div class="col-sm-6">
-                        <div class="row">
-                            <p class="lead mb-0"> <b>Fecha</b></p>
-                            <input class="form-control form-control-lg" id="fecha_sugerencia" type="email" placeholder="" data-sb-validations="required,email" />
-                            <br>
-                            <br>
-                            <br>
-                            <p class="lead mb-0"> <b>Email</b></p>
-                            <input class="form-control form-control-lg" id="email" type="email" placeholder="" data-sb-validations="required,email" />
+                    <br>
+
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <label for="form-label" class="form-label">Fecha</label> <br>
+                            <input type="date"  class="form-control" required placeholder="Area donde fue atendido">    
                         </div>
+                        <div class="col-lg-4">
+                            <label for="form-label" class="form-label">Correo Electronico</label> <br>
+                            <input type="email"  class="form-control" required placeholder="E-mail">    
+                        </div>  
+                        <div class="col-lg-4">
+                            <label for="form-label" class="form-label">Celular</label> <br>
+                            <input type="number"  class="form-control" required placeholder="Número de celular">    
+                        </div>     
                     </div>
-                </div>
-                <br>
-                <br>
-                <div class="row">
-                    <p class="lead mb-0"> <b>Describa la sugerencia que desea informar</b></p>
-                    <input class="form-control form-control-lg" id="sugerencia" type="email" placeholder="Describa" data-sb-validations="required,email" />
-                    <p>Los datos e información personal aquí consignados, se les dará tratamiento especial de acuerdo con lo establecido en la ley estatutaria 1581 de 2012</p>
-                    <p>Confirmación de uso de datos. Política de Protección de Datos</p>
-                    <a class="btn btn-primary" href="#signup">Enviar</a>
-                </div>
+                        
+                    
+                    <br>
+                    <br>
+                    <div class="row">
+                        <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Sugerencias y/o felicitaciones</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"  placeholder="Describa la sugerencia que desea informar"></textarea>
+                        </div>
+                    </div>    
+                        <p>Los datos e información personal aquí consignados, se les dará tratamiento especial de acuerdo con lo establecido en la ley estatutaria 1581 de 2012</p>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" role="switch" required id="flexSwitchCheckDefault">
+                                    <label class="form-check-label" for="flexSwitchCheckDefault">Confirmación de uso de datos. Política de Protección de Datos</label>
+                                </div>
+                            </div>
+                        </div>
+                        <br><br>
+                        <button class="btn btn-lg btn-primary" type="submit" >Enviar</button>
+                    </div>
+                </form>
             </div>
         </section>
         <!-- Footer-->
