--- a/paciente2 citasP.html
+++ b/paciente2 citasP.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <img src="assets/img/logocli.png">
-                <h3><b>SUGERENCIAS</b></h3>
+                <h3><b>AGENDAR CITAS</b></h3>
             </div>
         </nav>
         <section class="features-icons bg-light text-center">
