--- a/paciente2 citasP.html
+++ b/paciente2 citasP.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Clínica Vive Mejor</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/logo.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Google fonts-->
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="row">
                    <div class="col-sm-4">
-                        <img src="assets/img/doctor1-1228629.jpg" class="col-xl-12 order-lg-4 text-white showcase-img"  height="550px" alt="">
+                        <img src="assets/img/doctor1-1228629.jpg" class="col-xl-12 order-lg-4 text-white showcase-img"  style="background-size: contain"   alt="">
                     </div>
                     <div class="col-sm-8">
                         <div class="col-sm-5">
