--- a/admin_crear_usuario1.html
+++ b/admin_crear_usuario1.html
@@ -45,7 +45,7 @@
                                 <a class="btn btn-primary" href="#signup">CITAS</a>                                                         
                                 <a class="btn btn-primary" href="#signup">SUGERENCIAS</a>                                                                                                      
                                 <a class="btn btn-primary" href="#signup">ESPECIALISTAS</a>                                   
-                                <a class="btn btn-primary" href="#signup">ESPECIALIDADES</a>                                                               
+                                <a class="btn btn-primary" href="admin_especialidad1.html">ESPECIALIDADES</a>                                                               
                                 <a class="btn btn-primary" href="#signup">PACIENTES</a>                                                                             
                                 <a class="btn btn-primary" href="#signup">USUARIOS</a>                                                            
                                 <a class="btn btn-primary" href="#signup">EPS</a>                                   
@@ -71,7 +71,7 @@
                                     <tr class="table-primary">
                                         <td class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Opciones</a>
-                                            <div class="dropdown-menu" style="">
+                                            <div class="dropdown-menu">
                                               <a class="dropdown-item" href="#">Editar Usuario</a>
                                               <a class="dropdown-item" href="#">Eliminar Usuario</a>                                              
                                               <div class="dropdown-divider"></div>                                              
