--- a/admin_especialidad2.html
+++ b/admin_especialidad2.html
@@ -53,9 +53,11 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col-sm-9">
+                        <br><br>
                         <div class="card-title">
-                            <h1>ESPECIALIDAD</h1>
+                            <h1>CREAR ESPECIALIDAD</h1>
                             <br>                                                                                                        
                         </div>
                         <br><br>
