--- a/admin_especialidad2.html
+++ b/admin_especialidad2.html
@@ -44,7 +44,7 @@
                             <div class="d-grid gap-2">
                                 <a class="btn btn-primary" href="#signup">CITAS</a>                                                         
                                 <a class="btn btn-primary" href="#signup">SUGERENCIAS</a>                                                                                                      
-                                <a class="btn btn-primary" href="#signup">ESPECIALISTAS</a>                                   
+                                <a class="btn btn-primary" href="admin_especialista2.html">ESPECIALISTAS</a>                                   
                                 <a class="btn btn-primary" href="admin_especialidad1.html">ESPECIALIDADES</a>                                                               
                                 <a class="btn btn-primary" href="#signup">PACIENTES</a>                                                                             
                                 <a class="btn btn-primary" href="#signup">USUARIOS</a>                                                            
