--- a/admin_especialista2.html
+++ b/admin_especialista2.html
@@ -56,12 +56,12 @@
                     <div class="col-sm-9">
                         <br><br>
                         <div class="card-title">
-                            <h1>ESPECIALIDAD</h1>
+                            <h1>ESPECIALISTAS</h1>
                             <br>                                                                                                        
                         </div>
                         <br><br>
                         <div>
-                            <a class="btn btn-primary btn-sm" href="admin_especialidad2.html">NUEVA ESPECIALIDAD</a>
+                            <a class="btn btn-primary btn-sm" href="admin_especialista1.html">NUEV@ ESPECIALISTA</a>
                             <br>
                             <br>
                             <br>
@@ -75,12 +75,13 @@
                                             <th scope="col">OPCIONES</th>
                                             <th scope="col">ESPECIALIDAD</th>
                                             <th scope="col">PROFESIONAL</th>
+                                            <th scope="col">NUMERO DE DOCUMENTO</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
                                             <th scope="row">
-                                                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">OPCION</button>
+                                                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">OPCIONES</button>
                                                 <ul class="dropdown-menu">
                                                     <li><a class="dropdown-item" href="#">ELIMINAR</a></li>
                                                     <li><a class="dropdown-item" href="#">EDITAR</a></li>
@@ -88,6 +89,7 @@
                                             </th>
                                             <td>medicina general</td>
                                             <td>Jully</td>
+                                            <td>1231413312</td>
 
                                             </tr>
                                     </tbody>
