--- a/admin_especialista2.html
+++ b/admin_especialista2.html
@@ -43,7 +43,7 @@
                             <br>                            
                             <div class="d-grid gap-2">
                                 <a class="btn btn-primary" href="#signup">CITAS</a>                                                         
-                                <a class="btn btn-primary" href="#signup">SUGERENCIAS</a>                                                                                                      
+                                <a class="btn btn-primary" href="admin_sugerencias.html">SUGERENCIAS</a>                                                                                                      
                                 <a class="btn btn-primary" href="admin_especialista2.html">ESPECIALISTAS</a>                                   
                                 <a class="btn btn-primary" href="admin_especialidad1.html">ESPECIALIDADES</a>                                                               
                                 <a class="btn btn-primary" href="#signup">PACIENTES</a>                                                                             
