--- a/admin_especialista1.html
+++ b/admin_especialista1.html
@@ -23,7 +23,7 @@
                 <img src="assets/img/logocli.png">
 
                 <h3><b>ADMINISTRADOR</b></h3>
-                <a class="btn btn-primary" href="index.html">Log out</a>
+                <a class="btn btn-primary" href="index.html">Log gugu out</a>
             </div>
         </nav>
 
