--- a/medico4.html
+++ b/medico4.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <img src="assets/img/logocli.png">
-
+                <a class="btn btn-primary" href="index.html">Log out</a>
                 <h3><b>MEDICO</b></h3>
             </div>
         </nav>
@@ -41,7 +41,7 @@
                             <br>                            
                             <div class="d-grid gap-2">
                                 <a class="btn btn-primary" href="medico1.html">LISTAR AGENDA</a>                                                                                          
-                                <a class="btn btn-primary" href="#signup">HISTORIAS CLINICAS</a>
+                                <a class="btn btn-primary" href="medico_historiaclinica.html">HISTORIAS CLINICAS</a>
                             </div>
                         </div>
                     </div>
