--- a/medico2.html
+++ b/medico2.html
@@ -1,165 +1,3 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Clínica Vive Mejor</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/logo.png" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body>
-        <!-- Navigation-->
-        <nav class="navbar navbar-light bg-light static-top">
-            <div class="container">
-                <img src="assets/img/logocli.png">
-                <h3><b>MEDICO</b></h3>
-            </div>
-        </nav>
-
-        <!-- Icons Grid-->
-        <section class="features-icons bg-light text-center">
-            <div class="container">
-                <div class="row">
-                   <div class="col-sm-3">
-                        <div class="row">
-                            <p class="lead mb-0"><b>CONSULTAR AGENDA</b> <br> <b>HISTORIAS CLÍNICA</b></p>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                                <a class="btn btn-primary" href="medico1.html">Listar Agenda</a>
-                                <br>
-                                <br>
-                                <br>
-                                <a class="btn btn-primary" href="#signup">Historias Clínicas</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-9">
-                        <div class="row">
-                            <H1>LISTAR AGENDA</H1>
-                            <br>
-                            <br>
-                            <br>
-                            <div class="col-sm-12">
-                                <b>FECHA      </b> 15/03/22
-                            </div>
-                            <br>
-                            <br>
-                            <br>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <b></b>
-                            </div>
-                            <div class="col-sm-3">
-                                <b>NOMBRE</b>                 
-                            </div>
-                            <div class="col-sm-3">
-                                <b>NUMERO DE DOCUMENTO</b>
-                            </div>
-                            <div class="col-sm-3">
-                                <b>FECHA</b>
-                            </div>
-                        </div>
-                        <br>
-                        <br>
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <a class="btn btn-primary" href="medico3.html">SELECCIONAR</a>
-                            </div>
-                            <div class="col-sm-3">
-                                <p>Pepito Perez</p>
-                            </div>
-                            <div class="col-sm-3">
-                                <p>1015789356</p>
-                            </div>
-                            <div class="col-sm-3">
-                                <p>15/03/22</p>
-                            </div>
-                        </div>
-                        <br>
-                        <br>
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <a class="btn btn-primary" href="#signup">SELECCIONAR</a>
-                            </div>
-                            <div class="col-sm-3">
-                                <p>Pepito Perez</p>
-                            </div>
-                            <div class="col-sm-3">
-                                <p>1015789356</p>
-                            </div>
-                            <div class="col-sm-3">
-                                <p>15/03/22</p>
-                            </div>
-                        </div>
-                        <br>
-                        <br>
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <a class="btn btn-primary" href="#signup">SELECCIONAR</a>
-                            </div>
-                            <div class="col-sm-3">
-                                <p>Pepito Perez</p>
-                            </div>
-                            <div class="col-sm-3">
-                                <p>1015789356</p>
-                            </div>
-                            <div class="col-sm-3">
-                                <p>15/03/22</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Footer-->
-        <footer class="footer bg-light">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
-                        <p class="text-muted small mb-4 mb-lg-0">&copy; Clínica Vive Mejor 2022. </p>
-                    </div>
-                    <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
-                        <ul class="list-inline mb-0">
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-facebook fs-3"></i></a>
-                            </li>
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-twitter fs-3"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!"><i class="bi-instagram fs-3"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    </body>
-</html>
-=======
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -203,7 +41,7 @@
                             <br>                            
                             <div class="d-grid gap-2">
                                 <a class="btn btn-primary" href="medico1.html">LISTAR AGENDA</a>                                                                                          
-                                <a class="btn btn-primary" href="#signup">HISTORIAS CLINICAS</a>
+                                <a class="btn btn-primary" href="medico_historiaclinica.html">HISTORIAS CLINICAS</a>
                             </div>
                         </div>
                     </div>
