--- a/admin_cita.html
+++ b/admin_cita.html
@@ -58,7 +58,7 @@
                             <br>                                                                                                        
                         </div>
                         <div>
-                            <a class="btn btn-primary btn-sm" href="admin_crear_paciente.html">NUEVA CITA</a>
+                            <a class="btn btn-primary btn-sm" href="admin_crear_cita.html">NUEVA CITA</a>
                             <br>
                             <form class="row g-3 mt-3">
                                 <div class="col-4">
@@ -87,7 +87,7 @@
                         </div>
                         <br>
                         <br>
-                        <a class="btn btn-primary btn-sm" href="admin_crear_paciente.html">GUARDAR</a>
+                        <a class="btn btn-primary btn-sm" href="admin_crear_cita.html">GUARDAR</a>
                         <br>
                         <br>
                         <br>
