--- a/medico_historiaclinica1.html
+++ b/medico_historiaclinica1.html
@@ -109,7 +109,7 @@
                         </form>
                         <form class="row g-3 mt-3">
                             <div class="col-6">
-                                <label for="exampleInputEmail1" class="form-label">Correo Electronico.</label>
+                                <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresar email">                                
                             </div>
                             <div class="col-6">
@@ -123,8 +123,25 @@
                                 </div>
                             </div>
                         </form>
-                        </form>
                         <br>
+                        <br>
+                        <div class="card-title">
+                            <H1>INFORMACIÓN CLÍNICA</H1>
+                        </div>
+                        <form class="row g-3 mt-3">
+                            <div class="col-6">
+                                <label for="Dx" class="form-label">Diagnóstico</label>
+                                <input type="Dx" class="form-control" id="Dx" aria-describedby="emailHelp" placeholder="Dx">                                
+                            </div>
+                            <div class="col-6">
+                            </div>
+                        </form>
+                        <form class="row g-3 mt-3">
+                            <div class="col-12">
+                                <label for="observaciones_dx" class="form-label">Observaciones</label>
+                                <input type="observaciones_dx" class="form-control" id="observaciones_dx" aria-describedby="emailHelp" placeholder="">                                
+                            </div>
+                        </form>
                         <br>
                         <a class="btn btn-primary btn-sm" href="medico_historiaclinica.html">CREAR</a>
                     </div>
