--- a/admin_crear_usuario1.html
+++ b/admin_crear_usuario1.html
@@ -1,131 +1,3 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Clínica Vive Mejor</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/logo.png" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-
-    <body>
-        <!-- Navigation-->
-        <nav class="navbar navbar-light bg-light static-top">
-            <div class="container">
-                <img src="assets/img/logocli.png">
-
-                <h3><b>ADMINISTRADOR</b></h3>
-            </div>
-        </nav>
-
-        <!-- Icons Grid-->
-        <section>
-            <div class="container">
-                <div class="row">
-                   <div class="col-sm-3">
-                        <div class="row">
-                            <p class="lead mb-0">
-                                <b> GESTION CITAS</b> 
-                                <br>                                                               
-                                <b>HISTORIAS CLINICAS</b>                                                                                             
-                                <b>___________________________</b>
-                            </p>
-                            <br>
-                            <br>                            
-                            <div class="d-grid gap-2">
-                                <a class="btn btn-primary" href="#signup">CITAS</a>                                                         
-                                <a class="btn btn-primary" href="#signup">SUGERENCIAS</a>                                                                                                      
-                                <a class="btn btn-primary" href="#signup">ESPECIALISTAS</a>                                   
-                                <a class="btn btn-primary" href="#signup">ESPECIALIDADES</a>                                                               
-                                <a class="btn btn-primary" href="#signup">PACIENTES</a>                                                                             
-                                <a class="btn btn-primary" href="#signup">USUARIOS</a>                                                            
-                                <a class="btn btn-primary" href="#signup">EPS</a>                                   
-                                <a class="btn btn-primary" href="#signup">HISTORIAS CLINICAS</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-9">
-                        <div class="card-title">
-                            <h1>USUARIO.</h1>
-                            <br>                                                                                                        
-                        </div>
-                        <div>
-                            <a class="btn btn-primary btn-sm" href="admin_crear_usuario2.html">NUEVO USUARIO</a>
-                            <br>
-                            <br>
-                            <br>
-                        </div>
-
-                        <div class="row">
-                            <table class="table table-hover">
-                                <thead>
-                                    <tr class="table-primary">
-                                        <td class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Opciones</a>
-                                            <div class="dropdown-menu" style="">
-                                              <a class="dropdown-item" href="#">Editar Usuario</a>
-                                              <a class="dropdown-item" href="#">Eliminar Usuario</a>                                              
-                                              <div class="dropdown-divider"></div>                                              
-                                            </div>
-                                        </td>
-                                        <td>NOMBRE Y APELLIDO</td>
-                                        <td>DOCUMENTO</td>                                        
-                                        <td>EMAIL</td>
-                                        <td>FECHA NACIMIENTO</td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td>Pepito Perez</td>
-                                        <td>1018987654</td>                                        
-                                        <td>pepitoperez@gmail.com</td>
-                                        <td>22/07/20</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>                                     
-        </section>
-        <!-- Footer-->
-        <footer class="footer bg-light">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
-                        <p class="text-muted small mb-4 mb-lg-0">&copy; Clínica Vive Mejor 2022. </p>
-                    </div>
-                    <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
-                        <ul class="list-inline mb-0">
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-facebook fs-3"></i></a>
-                            </li>
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-twitter fs-3"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!"><i class="bi-instagram fs-3"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-=======
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -170,13 +42,13 @@
                             <br>
                             <br>                            
                             <div class="d-grid gap-2">
-                                <a class="btn btn-primary" href="#signup">CITAS</a>                                                         
+                                <a class="btn btn-primary" href="admin_cita.html">CITAS</a>                                                         
                                 <a class="btn btn-primary" href="admin_sugerencias.html">SUGERENCIAS</a>                                                                                                      
-                                <a class="btn btn-primary" href="admin_especialista2.html">ESPECIALISTAS</a>                                   
+                                <a class="btn btn-primary" href="admin_especialista1.html">ESPECIALISTAS</a>                                   
                                 <a class="btn btn-primary" href="admin_especialidad1.html">ESPECIALIDADES</a>                                                               
-                                <a class="btn btn-primary" href="#signup">PACIENTES</a>                                                                             
-                                <a class="btn btn-primary" href="#signup">USUARIOS</a>                                                            
-                                <a class="btn btn-primary" href="#signup">EPS</a>                                   
+                                <a class="btn btn-primary" href="admin_crear_paciente.html">PACIENTES</a>                                                                             
+                                <a class="btn btn-primary" href="admin_crear_usuario1.html">USUARIOS</a>                                                            
+                                <a class="btn btn-primary" href="admin_crear_Eps.html">EPS</a>                                   
                                 <a class="btn btn-primary" href="#signup">HISTORIAS CLINICAS</a>
                             </div>
                         </div>
