--- a/admin_especialidad2.html
+++ b/admin_especialidad2.html
@@ -42,15 +42,14 @@
                             <br>
                             <br>                            
                             <div class="d-grid gap-2">
-                                <a class="btn btn-primary" href="#signup">CITAS</a>                                                         
+                                <a class="btn btn-primary" href="admin_cita.html">CITAS</a>                                                         
                                 <a class="btn btn-primary" href="admin_sugerencias.html">SUGERENCIAS</a>                                                                                                      
-                                <a class="btn btn-primary" href="admin_especialista2.html">ESPECIALISTAS</a>                                   
+                                <a class="btn btn-primary" href="admin_especialista1.html">ESPECIALISTAS</a>                                   
                                 <a class="btn btn-primary" href="admin_especialidad1.html">ESPECIALIDADES</a>                                                               
-                                <a class="btn btn-primary" href="#signup">PACIENTES</a>                                                                             
-                                <a class="btn btn-primary" href="#signup">USUARIOS</a>                                                            
-                                <a class="btn btn-primary" href="#signup">EPS</a>                                   
+                                <a class="btn btn-primary" href="admin_crear_paciente.html">PACIENTES</a>                                                                             
+                                <a class="btn btn-primary" href="admin_crear_usuario1.html">USUARIOS</a>                                                            
+                                <a class="btn btn-primary" href="admin_crear_Eps.html">EPS</a>                                   
                                 <a class="btn btn-primary" href="#signup">HISTORIAS CLINICAS</a>
-                            </div>
                         </div>
                     </div>
                     
