--- a/admin_crear_usuario1.html
+++ b/admin_crear_usuario1.html
@@ -30,17 +30,19 @@
         <!-- Icons Grid-->
         <section>
             <div class="container">
-                <div class="row">
+                <div class="row g-3 mt-3">
                    <div class="col-sm-3">
                         <div class="row">
                             <p class="lead mb-0">
                                 <b> GESTION CITAS</b> 
                                 <br>                                                               
                                 <b>HISTORIAS CLINICAS</b>                                                                                             
-                                <b>___________________________</b>
+                                <b>________________________________________</b>
                             </p>
                             <br>
-                            <br>                            
+                            <br>
+                            <br>
+                            <br>                           
                             <div class="d-grid gap-2">
                                 <a class="btn btn-primary" href="admin_cita.html">CITAS</a>                                                         
                                 <a class="btn btn-primary" href="admin_sugerencias.html">SUGERENCIAS</a>                                                                                                      
