--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                     <h2 class="mb-5">Ingrese fácilmente a las opciones presentadas debajo:</h2>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <a class="btn btn-primary" href="paciente1.html">Consultar cita</a>
+                            <a class="btn btn-primary" href="paciente4_consultarcita.html">Consultar cita</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <a class="btn btn-primary" href="#signup">Consultar cita</a>
+                            <a class="btn btn-primary" href="paciente_agendarcita.html">Agendar cita</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <a class="btn btn-primary" href="#signup">Consultar cita</a>
+                            <a class="btn btn-primary" href="paciente_sugerencias.html">Sugerencias</a>
                         </div>
                     </div>
                 </div>
