--- a/medico1.html
+++ b/medico1.html
@@ -28,15 +28,17 @@
         <!-- Icons Grid-->
         <section class="features-icons bg-light text-center">
             <div class="container">
-                <div class="row">
+                <div class="row g-3 mt-3">
                     <div class="col-sm-3">
                         <div class="row">
                             <p class="lead mb-0">
                                 <b>CONSULTAR AGENDA</b> 
                                 <br>                                                               
                                 <b>HISTORIAS CLINICAS</b>                                                                                             
-                                <b>__________________</b>
+                                <b>________________________________________</b>
                             </p>
+                            <br>
+                            <br>
                             <br>
                             <br>                            
                             <div class="d-grid gap-2">
