--- a/medico_historiaclinica.html
+++ b/medico_historiaclinica.html
@@ -33,7 +33,7 @@
         <br>
         <section>
             <div class="container">
-                <div class="row">
+                <div class="row g-3 mt-3">
                     <div class="col-sm-3">
                         <div class="row">
                             <center>
@@ -42,14 +42,16 @@
                                     <b>CONSULTAR AGENDA</b> 
                                     <br>                                                               
                                     <b>HISTORIAS CLINICAS</b>                                                                                             
-                                    <b>__________________</b>
+                                    <b>________________________________________</b>
                             </p>
                             </center>
                             <br>
-                            <br>                            
+                            <br>  
+                            <br>
+                            <br>                          
                             <div class="d-grid gap-2">
                                 <a class="btn btn-primary" href="medico1.html">LISTAR AGENDA</a>                                                                                          
-                                <a class="btn btn-primary" href="#signup">HISTORIAS CLINICAS</a>
+                                <a class="btn btn-primary" href="medico_historiaclinica.html">HISTORIAS CLINICAS</a>
                             </div>
                         </div>
                     </div>
@@ -82,7 +84,7 @@
                         </form>
                         <br>
                         <br>
-                        <a class="btn btn-primary btn-sm" href="#">BUSCAR</a>
+                        <a class="btn btn-primary btn-sm" href="medico_historiaclinica2.html">BUSCAR</a>
                     </div>
                 </div>
             </div>
