--- a/admin_crear_usuario1.html
+++ b/admin_crear_usuario1.html
@@ -37,7 +37,7 @@
                                 <b> GESTION CITAS</b> 
                                 <br>                                                               
                                 <b>HISTORIAS CLINICAS</b>                                                                                             
-                                <b>________________________________________</b>
+                                <b>__________________________________</b>
                             </p>
                             <br>
                             <br>
@@ -51,7 +51,7 @@
                                 <a class="btn btn-primary" href="admin_crear_paciente.html">PACIENTES</a>                                                                             
                                 <a class="btn btn-primary" href="admin_crear_usuario1.html">USUARIOS</a>                                                            
                                 <a class="btn btn-primary" href="admin_crear_Eps.html">EPS</a>                                   
-                                <a class="btn btn-primary" href="#signup">HISTORIAS CLINICAS</a>
+                                <a class="btn btn-primary" href="admin_historiaclinica.html">HISTORIAS CLINICAS</a>
                             </div>
                         </div>
                     </div>
