--- a/admin_especialidad2.html
+++ b/admin_especialidad2.html
@@ -48,13 +48,13 @@
                                 <a class="btn btn-primary" href="admin_sugerencias.html">SUGERENCIAS</a>                                                                                                      
                                 <a class="btn btn-primary" href="admin_especialista1.html">ESPECIALISTAS</a>                                   
                                 <a class="btn btn-primary" href="admin_especialidad1.html">ESPECIALIDADES</a>                                                               
-                                <a class="btn btn-primary" href="admin_crear_paciente.html">PACIENTES</a>                                                                             
+                                <a class="btn btn-primary" href="admin_paciente.html">PACIENTES</a>                                                                             
                                 <a class="btn btn-primary" href="admin_crear_usuario1.html">USUARIOS</a>                                                            
                                 <a class="btn btn-primary" href="admin_crear_Eps.html">EPS</a>                                   
                                 <a class="btn btn-primary" href="admin_historiaclinica.html">HISTORIAS CLINICAS</a>
+                            </div>
                         </div>
                     </div>
-                    
                     <div class="col-sm-9">
                         <br><br>
                         <div class="card-title">
