--- a/admin_crear_cita.html
+++ b/admin_crear_cita.html
@@ -51,7 +51,7 @@
                                 <a class="btn btn-primary" href="admin_especialidad1.html">ESPECIALIDADES</a>                                                               
                                 <a class="btn btn-primary" href="admin_paciente.html">PACIENTES</a>                                                                             
                                 <a class="btn btn-primary" href="admin_crear_usuario1.html">USUARIOS</a>                                                            
-                                <a class="btn btn-primary" href="admin_crear_Eps.html">EPS</a>                                   
+                                <a class="btn btn-primary" href="admin_Eps.html">EPS</a>                                   
                                 <a class="btn btn-primary" href="admin_historiaclinica.html">HISTORIAS CLINICAS</a>
                             </div>
                         </div>
