--- a/admin_cita.html
+++ b/admin_cita.html
@@ -65,8 +65,8 @@
                             <br>
                             <form class="row g-3 mt-3">
                                 <div class="col-4">
-                                    <label for="primerNombre" class="form-label">ESPECIALISTA</label>
-                                    <select class="form-select" id="tipoDcto">
+                                    <label for="especialista" class="form-label">ESPECIALISTA</label>
+                                    <select class="form-select" id="especialista">
                                         <option></option>
                                         <option>Fisioterapeuta.</option>
                                         <option>Traumatologo.</option>
@@ -76,13 +76,13 @@
                                 </div>
     
                                 <div class="col-4">
-                                    <label for="segNombre" class="form-label">FECHA DE NACIMIENTO</label>
-                                    <input type="nombre" class="form-control" id="segnombre" placeholder="Escribir segundo nombre">
+                                    <label for="fecha" class="form-label">FECHA DE NACIMIENTO</label>
+                                    <input type="nombre" class="form-control" id="fecha" placeholder="Escribir fecha de nacimiento">
                                 </div>
     
                                 <div class="col-4">
-                                    <label for="primerApell" class="form-label">NUMERO DE DOCUMENTO.</label>
-                                    <input type="apellido" class="form-control" id="primerApell" placeholder="Escribir primer apellido">
+                                    <label for="documento" class="form-label">NUMERO DE DOCUMENTO.</label>
+                                    <input type="documento" class="form-control" id="documento" placeholder="Número de documento">
                                 </div>
                             <br>
                             <br>
