--- a/admin_crear_Eps.html
+++ b/admin_crear_Eps.html
@@ -62,13 +62,13 @@
                         </div>                    
                         <form class="row g-3 mt-3">
                             <div class="col-6">
-                                <label for="primerNombre" class="form-label">Nombre</label>
-                                <input type="nombre" class="form-control" id="primernombre" placeholder="Escribir primer nombre">
+                                <label for="nombre_eps" class="form-label">Nombre</label>
+                                <input type="nombre_eps" class="form-control" id="nombre_eps" placeholder="Escribir nombre EPS">
                             </div>
 
                             <div class="col-6">
-                                <label for="segNombre" class="form-label">Descripción.</label>
-                                <input type="nombre" class="form-control" id="segnombre" placeholder="Escribir segundo nombre">
+                                <label for="descripcion_eps" class="form-label">Descripción.</label>
+                                <input type="descripcion_eps" class="form-control" id="descripcion_eps" placeholder="Escribir descripción EPS">
                             </div>
                             <div>
                                 <a class="btn btn-primary btn-sm" href="admin_EPS.html">GUARDAR</a>
