--- a/admin_crear_cita.html
+++ b/admin_crear_cita.html
@@ -73,8 +73,8 @@
                             </div>
 
                             <div class="col-4">
-                                <label for="segNombre" class="form-label">Numero de Documento.</label>
-                                <input type="nombre" class="form-control" id="segnombre" placeholder="Escribir segundo nombre">
+                                <label for="documento" class="form-label">Numero de Documento.</label>
+                                <input type="nombre" class="form-control" id="documento" placeholder="Número de documento">
                             </div>
 
                             <div class="col-4"> 
@@ -87,37 +87,37 @@
                             </div>
 
                             <div class="col-3">
-                                <label for="primerApell" class="form-label">Primer Nombre.</label>
-                                <input type="apellido" class="form-control" id="primerApell" placeholder="Escribir primer apellido">
+                                <label for="primerNombre" class="form-label">Primer Nombre.</label>
+                                <input type="apellido" class="form-control" id="primerNombre" placeholder="Escribir primer nombre">
                             </div>
 
                             <div class="col-3">
-                                <label for="segApell" class="form-label">Segundo Nombre.</label>
-                                <input type="apellido" class="form-control" id="segApell" placeholder="Escribir segundo nombre">
+                                <label for="segNom" class="form-label">Segundo Nombre.</label>
+                                <input type="apellido" class="form-control" id="segNom" placeholder="Escribir segundo nombre">
                             </div>
 
                             <div class="col-3">
-                                <label for="segApell" class="form-label">Primer Apellido.</label>
-                                <input type="apellido" class="form-control" id="segApell" placeholder="Escribir segundo nombre">
+                                <label for="priApell" class="form-label">Primer Apellido.</label>
+                                <input type="apellido" class="form-control" id="primApell" placeholder="Escribir primer apellido">
                             </div>
 
                             <div class="col-3">
-                                <label for="numDcto" class="form-label">Segundo Apellido.</label>
-                                <input type="dcto" class="form-control" id="numDcto" placeholder="Escribir numero de Documento">
+                                <label for="segApell" class="form-label">Segundo Apellido.</label>
+                                <input type="dcto" class="form-control" id="segApell" placeholder="Escribir segundo apellido">
                             </div>
                             
                             <div class="col-6">
                                 <label for="segApell" class="form-label">EMAIL.</label>
-                                <input type="apellido" class="form-control" id="segApell" placeholder="Escribir segundo nombre">
+                                <input type="apellido" class="form-control" id="segApell" placeholder="Escribir email">
                             </div>
 
                             <div class="col-6">
-                                <label for="numDcto" class="form-label">CELULAR.</label>
-                                <input type="dcto" class="form-control" id="numDcto" placeholder="Escribir numero de Documento">
+                                <label for="celular" class="form-label">CELULAR.</label>
+                                <input type="celular" class="form-control" id="celular" placeholder="Escribir numero de celular">
                             </div>
                             <div class="col-6">
-                                <label for="tipoDcto" class="form-label">PAIS.</label>
-                                    <select class="form-select" id="tipoDcto">
+                                <label for="pais" class="form-label">PAIS.</label>
+                                    <select class="form-select" id="pais">
                                     <option></option>
                                     <option>Colombia.</option>
                                     <option>Venezuela.</option>
@@ -125,15 +125,15 @@
                                     </select>
                             </div> 
                             <div class="col-6">
-                                <label for="segApell" class="form-label">CIUDAD.</label>
-                                <input type="apellido" class="form-control" id="segApell" placeholder="Escribir segundo nombre">
+                                <label for="ciudad" class="form-label">CIUDAD.</label>
+                                <input type="ciudad" class="form-control" id="ciudad" placeholder="Escribir ciudad">
                             </div> 
 
                             <h1>TIPO DE CITA.</h1> 
 
                             <div class="col-6">
-                                <label for="tipoDcto" class="form-label">ESPECIALIDAD.</label>
-                                    <select class="form-select" id="tipoDcto">
+                                <label for="especialidad" class="form-label">ESPECIALIDAD.</label>
+                                    <select class="form-select" id="especialidad">
                                     <option></option>
                                     <option>Fisioterapia.</option>
                                     <option>fisiatria.</option>
@@ -141,8 +141,8 @@
                                     </select>
                             </div> 
                             <div class="col-6">
-                                <label for="tipoDcto" class="form-label">ESPECIALISTA.</label>
-                                    <select class="form-select" id="tipoDcto">
+                                <label for="especialista" class="form-label">ESPECIALISTA.</label>
+                                    <select class="form-select" id="especialista">
                                     <option></option>
                                     <option>Jose.</option>
                                     <option>Juan Carlos.</option>
@@ -151,11 +151,11 @@
                             </div> 
                             <div class="col-6">
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="eps" value="option1">
                                     <label class="form-check-label" for="inlineRadio1">EPS.</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="particular" value="option2">
                                     <label class="form-check-label" for="inlineRadio2">PARTICULAR.</label>
                                 </div>
                             </div>  
